dslSketch -> dslRaw